--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a href="/contact.html">Contact Me</a>
     <table cellspacing="20">
       <tr>
-        <td><img src="/img/me.png" alt="Shafayet Ahmad Kanon Photo" /></td>
+        <td><img src="img/me.png" alt="Shafayet Ahmad Kanon Photo" /></td>
         <td>
           <h1>Shafayet Ahmad Kanon</h1>
           <p>
