--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         <td>⭐⭐⭐</td>
       </tr>
     </table>
-    <a href="/hobbies.html">My Hobbies</a>
-    <a href="/contact.html">Contact Me</a>
+    <a href="hobbies.html">My Hobbies</a>
+    <a href="contact.html">Contact Me</a>
     <hr />
     <h3>Form:</h3>
     <form action="mail-to:kanon8308@gmail.com" method="post">
